welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:13: error: not found: value to
			for (x<-to getMondeHauteur()-1 to 0)
                                ^